--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+    <title>AK DEMO</title>
 </head>
 <body>
-    <h1>Web Dev Course Home Page</h1>
 
-    <p>
-        Customize this home page to your linking.
-    </p>
-
-    <h2>Required links</h2>
     <ul>
         <li>
-            <a href="project/index.html">Project</a>
+            <a href="project/index.html">Demo Website</a>
         </li>
         <li>
-            <a href="assignment/index.html">Assignment</a>
-        </li>
-        <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="#">Your public repository at GitHub.com</a>
+            <a href="#">Source</a>
         </li>
     </ul>
 </body>
