add basic ui to home(login) page

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -21,15 +21,12 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/vader/jquery-ui.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <!--<link href="css/navbar.css" rel="stylesheet">-->
-    <!--<link href="css/style.css" rel="stylesheet">-->
-    <!--<link href="css/comment.css" rel="stylesheet">-->
-    <!--<link href="css/home.css" rel="stylesheet">-->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 
     <title>AK DEMO</title>
 </head>
 <body>
-<!--<h1>Assignment Home Page</h1>-->
 <div ng-view></div>
 
 
