add ui after login success

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 
     <ul>
         <li>
-            <a href="project/index.html">Demo Website</a>
+            <a href="project/index.html">Demo Website (JS)</a>
         </li>
         <li>
-            <a href="#">Source</a>
+            <a href="#">Demo Website (Non-JS)</a>
         </li>
     </ul>
 </body>
